# streamlit-scroll-navigation

./: .gitignore  README.md  example.py  pyproject.toml
.github/workflows/: publish.yml
scroll_navigation/: CrossOriginInterface.js  CrossOriginInterface.min.js  __init__.py  package-lock.json  package.json
scroll_navigation/frontend/: package-lock.json  package.json
scroll_navigation/frontend/src/: MyComponent.tsx  ScrollNavigationBar.tsx
streamlit_scroll_navigation/: __init__.py  _version.py
streamlit_scroll_navigation/frontend/: package-lock.json  package.json
streamlit_scroll_navigation/frontend/public/: CrossOriginInterface.js
streamlit_scroll_navigation/frontend/src/: ScrollNavigationBar.tsx  index.tsx
