[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-custom-component"
version = "0.0.1"
description = "Streamlit component that allows you to do X"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    { name = "John Smith", email = "john@example.com" }
]
classifiers = [
    # Add classifiers that match your project
]

dependencies = [
    "streamlit >= 0.63"
]

[project.optional-dependencies]
devel = [
    "wheel",
    "twine",
    "setuptools >= 42",
]

[tool.setuptools]
include-package-data = true